struttura con commenti lato html/ ipotetiche utility classes in css

--- a/index.html
+++ b/index.html
@@ -8,9 +8,36 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
+    <!-- TOTAL PAGE -->
     <div class="wrapper">
+      <!-- HEADER ROW (upgrade) -->
+      <header>
 
+      </header>
+      <!-- END HEADER ROW (upgrade) -->
+
+      <!-- MAIN (nav/albums) -->
+      <main>
+        <!-- NAVBAR ROW -->
+        <nav>
+
+        </nav>
+        <!-- END NAVBAR ROW -->
+      </main>
+      <!-- END MAIN (nav/albums) -->
+
+      <!-- SID-BAR (left) -->
+      <div class="side-bar">
+
+      </div>
+      <!-- END SID-BAR (left) -->
+      
+      <!-- FOOTER (album/player/volume) -->
+      <footer>
+
+      </footer>
+      <!--END FOOTER (album/player/volume) -->
     </div>
-
+    <!-- END TOTAL PAGE -->
   </body>
 </html>
