--- a/index.html
+++ b/index.html
@@ -9,31 +9,32 @@
   </head>
   <body>
     <!-- TOTAL PAGE -->
-    <div class="wrapper">
-      <!-- HEADER ROW (upgrade) -->
-      <header>
-
-      </header>
-      <!-- END HEADER ROW (upgrade) -->
-
-      <!-- MAIN (nav/albums) -->
-      <main>
-        <!-- NAVBAR ROW -->
-        <nav>
-
-        </nav>
-        <!-- END NAVBAR ROW -->
-      </main>
-      <!-- END MAIN (nav/albums) -->
-
+    <div class="wrapper .relative-p">
       <!-- SID-BAR (left) -->
-      <div class="side-bar">
+      <div class="side-bar bg-color-black float-l">
 
       </div>
       <!-- END SID-BAR (left) -->
-      
+      <!-- HEADER ROW (upgrade) -->
+      <div class="box-r float-r">
+        <header class="bg-color-bunker">
+
+        </header>
+        <!-- END HEADER ROW (upgrade) -->
+
+        <!-- MAIN (nav/albums) -->
+        <main class="bg-color-blackrussian">
+          <!-- NAVBAR ROW -->
+
+          <!-- END NAVBAR ROW -->
+        </main>
+        <!-- END MAIN (nav/albums) -->
+      </div>
+
+
+
       <!-- FOOTER (album/player/volume) -->
-      <footer>
+      <footer class="bg-color-gray ">
 
       </footer>
       <!--END FOOTER (album/player/volume) -->
