side-bar compilata bozza

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>SpotifyWebDC</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
@@ -12,7 +14,39 @@
     <div class="wrapper .relative-p">
       <!-- SID-BAR (left) -->
       <div class="side-bar bg-color-black float-l">
+        <!-- logo side-bar -->
+        <div class="logo-container">
+          <img src="img/icon/logo.svg" alt="">
+        </div>
+        <!-- end logo side-bar -->
+        <!-- navigation side-bar -->
+        <ul class="nav-side-b">
+          <li><img src="img/icon/home.svg" alt=""> Home</li>
+          <li><img src="img/icon/search.svg" alt=""> Cerca</li>
+          <li><img src="img/icon/libreria.svg" alt=""> La tua libreria</li>
+        </ul>
+        <!-- end navigation side-bar -->
+        <!-- playlist -->
+        <div class="playlist-title-section">
+          <span>PLAYLIST</span>
+        </div>
+        <div class="crea-pl-container">
+          <img src="" alt="">
+          Crea Playlist
+        </div>
 
+        <ul class="playlist">
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+        </ul>
+
+
+        <!-- navigation side-bar -->
       </div>
       <!-- END SID-BAR (left) -->
       <!-- HEADER ROW (upgrade) -->
@@ -25,6 +59,9 @@
         <!-- MAIN (nav/albums) -->
         <main class="bg-color-blackrussian">
           <!-- NAVBAR ROW -->
+          <nav>
+
+          </nav>
 
           <!-- END NAVBAR ROW -->
         </main>
