side-bar completa (no responsive)

--- a/index.html
+++ b/index.html
@@ -11,42 +11,65 @@
   </head>
   <body>
     <!-- TOTAL PAGE -->
-    <div class="wrapper .relative-p">
+    <div class="wrapper relative-p clearfix">
       <!-- SID-BAR (left) -->
-      <div class="side-bar bg-color-black float-l">
+
+      <div class="side-bar bg-color-black float-l relative-p">
         <!-- logo side-bar -->
-        <div class="logo-container">
-          <img src="img/icon/logo.svg" alt="">
-        </div>
-        <!-- end logo side-bar -->
-        <!-- navigation side-bar -->
-        <ul class="nav-side-b">
-          <li><img src="img/icon/home.svg" alt=""> Home</li>
-          <li><img src="img/icon/search.svg" alt=""> Cerca</li>
-          <li><img src="img/icon/libreria.svg" alt=""> La tua libreria</li>
-        </ul>
-        <!-- end navigation side-bar -->
-        <!-- playlist -->
-        <div class="playlist-title-section">
-          <span>PLAYLIST</span>
-        </div>
-        <div class="crea-pl-container">
-          <img src="" alt="">
-          Crea Playlist
-        </div>
 
-        <ul class="playlist">
-          <li>Nome Playlist</li>
-          <li>Nome Playlist</li>
-          <li>Nome Playlist</li>
-          <li>Nome Playlist</li>
-          <li>Nome Playlist</li>
-          <li>Nome Playlist</li>
-          <li>Nome Playlist</li>
-        </ul>
+          <div class="logo-container">
+            <img src="img/icon/logo.svg" alt="">
+          </div>
+          <!-- end logo side-bar -->
+          <!-- navigation side-bar -->
+          <ul class="nav-side-b">
+            <li><img src="img/icon/home.svg" alt=""> Home</li>
+            <li><img src="img/icon/search.svg" alt=""> Cerca</li>
+            <li><img src="img/icon/libreria.svg" alt=""> La tua libreria</li>
+          </ul>
+          <!-- end navigation side-bar -->
+          <!-- playlist -->
+          <div class="playlist-container">
+            <div class="playlist-title-section">
+              <span class="font-white">PLAYLIST</span>
+            </div>
+            <div class="crea-pl-container">
+              <i class="fa fa-plus-square" aria-hidden="true"></i>
+              <span class="over-white">Crea Playlist</span>
+            </div>
+            <div class="playlist">
+              <ul>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+              </ul>
+            </div>
+          </div>
+          <!-- end playlist -->
+
+          <div class="user-container">
+            <div class="download-app">
+              <div class="download">
+                <img src="img/icon/download.svg" alt="">
+                <span class="over-white">Install app</span>
+              </div>
+              <div class="user">
+                <div class="user-img">
+                  <img src="img/icon/profile.svg" alt="">
+                  <span class="font-white">John Doe</span>
+
+                </div>
+              </div>
+
+            </div>
+          </div>
 
 
-        <!-- navigation side-bar -->
+
       </div>
       <!-- END SID-BAR (left) -->
       <!-- HEADER ROW (upgrade) -->
@@ -70,12 +93,13 @@
 
 
 
-      <!-- FOOTER (album/player/volume) -->
-      <footer class="bg-color-gray ">
-
-      </footer>
-      <!--END FOOTER (album/player/volume) -->
     </div>
     <!-- END TOTAL PAGE -->
+    <!-- FOOTER (album/player/volume) -->
+    <footer class="bg-color-gray fixed ">
+
+    </footer>
+    <!--END FOOTER (album/player/volume) -->
+
   </body>
 </html>
