header "effettua l'upgrade" completo (no responsive)

--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
             </div>
           </div>
           <!-- end playlist -->
-
-          <div class="user-container">
+          <div class="user-container bg-color-black">
             <div class="download-app">
               <div class="download">
                 <img src="img/icon/download.svg" alt="">
@@ -61,20 +60,19 @@
                 <div class="user-img">
                   <img src="img/icon/profile.svg" alt="">
                   <span class="font-white">John Doe</span>
-
                 </div>
               </div>
-
             </div>
           </div>
-
-
-
       </div>
       <!-- END SID-BAR (left) -->
       <!-- HEADER ROW (upgrade) -->
       <div class="box-r float-r">
-        <header class="bg-color-bunker">
+        <header class="bg-color-bunker float-r">
+          <div class="button-upgrade-container float-r">
+            <span class="button font-white">EFFETTUA L' UPGRADE</span>
+          </div>
+
 
         </header>
         <!-- END HEADER ROW (upgrade) -->
