--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>SpotifyWebDC</title>
+    <link rel="icon" href="img/icon/favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -72,16 +73,20 @@
           <div class="button-upgrade-container float-r">
             <span class="button font-white">EFFETTUA L' UPGRADE</span>
           </div>
-
-
         </header>
         <!-- END HEADER ROW (upgrade) -->
-
         <!-- MAIN (nav/albums) -->
         <main class="bg-color-blackrussian">
           <!-- NAVBAR ROW -->
-          <nav>
-
+          <nav class="flex-container">
+            <ul>
+              <li class="over-white">IN EVIDENZA <hr></li>
+              <li class="over-white">PODCAST <hr></li>
+              <li class="over-white">CLASSIFICHE <hr></li>
+              <li class="over-white">GENERI E MOO <hr></li>
+              <li class="over-white">NUOVE USCIT <hr></li>
+              <li class="over-white">SCOPRI <hr></li>
+            </ul>
           </nav>
 
           <!-- END NAVBAR ROW -->
@@ -94,7 +99,7 @@
     </div>
     <!-- END TOTAL PAGE -->
     <!-- FOOTER (album/player/volume) -->
-    <footer class="bg-color-gray fixed ">
+    <footer class="bg-color-gray fixed">
 
     </footer>
     <!--END FOOTER (album/player/volume) -->
