album orizzontali impostazione base

--- a/index.html
+++ b/index.html
@@ -88,8 +88,41 @@
               <li class="over-white">SCOPRI <hr></li>
             </ul>
           </nav>
-
           <!-- END NAVBAR ROW -->
+          <!-- albums -->
+          <div class="margin-main-titl">
+            <span class="main-title font-white">Recently played</span>
+          </div>
+          <div class="flex-container albums-hr">
+            <div class="img-album-container">
+              <img src="img/label/metal_lifting.jpg" alt="">
+              <div class="label-title-box text-center">
+                <span class="font-white">Heavy Metal</span>
+                <div class="label-subtitle ">
+                  <span class="subtitle">Subtitle</span>
+                </div>
+              </div>
+
+            </div>
+
+            <div class="img-album-container">
+              <img src="img/label/stranger.jpeg" alt="">
+            </div>
+            <div class="img-album-container">
+              <img src="img/label/aquietplace.jpeg" alt="">
+            </div>
+            <div class="img-album-container">
+              <img src="img/label/split.jpeg" alt="">
+            </div>
+            <div class="img-album-container">
+              <img src="img/label/cure.jpeg" alt="">
+            </div>
+            <div class="img-album-container">
+              <img src="img/label/sinister.jpeg" alt="">
+            </div>
+          </div>
+
+          <!-- end albums -->
         </main>
         <!-- END MAIN (nav/albums) -->
       </div>
