album row orizzontale completa (no responsive)

--- a/index.html
+++ b/index.html
@@ -102,23 +102,52 @@
                   <span class="subtitle">Subtitle</span>
                 </div>
               </div>
-
             </div>
 
             <div class="img-album-container">
               <img src="img/label/stranger.jpeg" alt="">
+              <div class="label-title-box text-center">
+                <span class="font-white">Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</span>
+                <div class="label-subtitle ">
+                  <span class="subtitle">Kyle Dixon & Michael Stein</span>
+                </div>
+              </div>
             </div>
             <div class="img-album-container">
               <img src="img/label/aquietplace.jpeg" alt="">
+              <div class="label-title-box text-center">
+                <span class="font-white">A quiet place</span>
+                <div class="label-subtitle ">
+                  <span class="subtitle">Subtitle</span>
+                </div>
+              </div>
             </div>
             <div class="img-album-container">
               <img src="img/label/split.jpeg" alt="">
+              <div class="label-title-box text-center">
+                <span class="font-white">Split</span>
+                <div class="label-subtitle ">
+                  <span class="subtitle">Subtitle</span>
+                </div>
+              </div>
             </div>
             <div class="img-album-container">
               <img src="img/label/cure.jpeg" alt="">
+              <div class="label-title-box text-center">
+                <span class="font-white">A cure for wellness</span>
+                <div class="label-subtitle ">
+                  <span class="subtitle">Subtitle</span>
+                </div>
+              </div>
             </div>
             <div class="img-album-container">
               <img src="img/label/sinister.jpeg" alt="">
+              <div class="label-title-box text-center">
+                <span class="font-white">Sinister</span>
+                <div class="label-subtitle ">
+                  <span class="subtitle">Subtitle</span>
+                </div>
+              </div>
             </div>
           </div>
 
