--- a/index.html
+++ b/index.html
@@ -12,159 +12,158 @@
   </head>
   <body>
     <!-- TOTAL PAGE -->
-    <div class="wrapper relative-p clearfix">
+    <div class="wrapper ">
       <!-- SID-BAR (left) -->
-
-      <div class="side-bar bg-color-black float-l relative-p">
-        <!-- logo side-bar -->
-
-          <div class="logo-container">
-            <img src="img/icon/logo.svg" alt="">
-          </div>
-          <!-- end logo side-bar -->
-          <!-- navigation side-bar -->
-          <ul class="nav-side-b">
-            <li><img src="img/icon/home.svg" alt=""> Home</li>
-            <li><img src="img/icon/search.svg" alt=""> Cerca</li>
-            <li><img src="img/icon/libreria.svg" alt=""> La tua libreria</li>
-          </ul>
-          <!-- end navigation side-bar -->
-          <!-- playlist -->
-          <div class="playlist-container">
-            <div class="playlist-title-section">
-              <span class="font-white">PLAYLIST</span>
+      <div class="principal-section">
+        <div class="side-bar bg-color-black float-l padding-default flex-    column">
+          <!-- logo side-bar -->
+          <div class="side-top">
+            <div class="logo-container">
+              <img src="img/icon/logo.svg" alt="">
             </div>
-            <div class="crea-pl-container">
-              <i class="fa fa-plus-square" aria-hidden="true"></i>
-              <span class="over-white">Crea Playlist</span>
-            </div>
-            <div class="playlist">
+            <!-- end logo side-bar -->
+            <!-- navigation side-bar -->
+            <div class="nav-side-b">
               <ul>
-                <li>Nome Playlist</li>
-                <li>Nome Playlist</li>
-                <li>Nome Playlist</li>
-                <li>Nome Playlist</li>
-                <li>Nome Playlist</li>
-                <li>Nome Playlist</li>
-                <li>Nome Playlist</li>
+                <li><img src="img/icon/home.svg" alt=""> Home</li>
+                <li><img src="img/icon/search.svg" alt=""> Cerca</li>
+                <li><img src="img/icon/libreria.svg" alt=""> La tua libreria</li>
               </ul>
             </div>
-          </div>
-          <!-- end playlist -->
-          <div class="user-container bg-color-black">
-            <div class="download-app">
-              <div class="download">
-                <img src="img/icon/download.svg" alt="">
-                <span class="over-white">Install app</span>
+            <!-- end navigation side-bar -->
+            <!-- playlist -->
+            <div class="playlist-container">
+              <div class="playlist-title-section">
+                <span class="font-white">PLAYLIST</span>
               </div>
-              <div class="user">
-                <div class="user-img">
-                  <img src="img/icon/profile.svg" alt="">
-                  <span class="font-white">John Doe</span>
+              <div class="crea-pl-container over-white">
+                <i class="fa fa-plus-square" aria-hidden="true"></i>
+                <span class="">Crea Playlist</span>
+              </div>
+              <div class="playlist">
+                <ul>
+                  <li>Nome Playlist</li>
+                  <li>Nome Playlist</li>
+                  <li>Nome Playlist</li>
+                  <li>Nome Playlist</li>
+                  <li>Nome Playlist</li>
+                  <li>Nome Playlist</li>
+                  <li>Nome Playlist</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+            <!-- end playlist -->
+          <div class="side-bottom padding-default">
+            <div class="user-container ">
+              <div class="download-app">
+                <div class="download">
+                  <img src="img/icon/download.svg" alt="">
+                  <a href="#" class="over-white">Install app</a>
+                </div>
+                <div class="user">
+                  <div class="user-img">
+                    <img src="img/icon/profile.svg" alt="">
+                    <span class="font-white">John Doe</span>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
+        </div>
+        <!-- END SID-BAR (left) -->
+        <div class="box-r float-l">
+          <main class="bg-color-blackrussian">
+            <header class="fixed ">
+              <div class="button-upgrade-container float-r">
+                <a href="#" class="button font-white">EFFETTUA L' UPGRADE</a>
+              </div>
+            </header>
+            <!-- NAVBAR ROW -->
+            <nav class="flex">
+              <ul>
+                <li class="over-white">IN EVIDENZA <hr></li>
+                <li class="over-white">PODCAST <hr></li>
+                <li class="over-white">CLASSIFICHE <hr></li>
+                <li class="over-white">GENERI E MOO <hr></li>
+                <li class="over-white">NUOVE USCIT <hr></li>
+                <li class="over-white">SCOPRI <hr></li>
+              </ul>
+            </nav>
+            <!-- END NAVBAR ROW -->
+            <!-- albums -->
+            <div class="margin-main-titl">
+              <span class="main-title font-white">Recently played</span>
+            </div>
+            <div class="flex albums-hr">
+              <div class="img-album-container">
+                <img src="img/label/metal_lifting.jpg" alt="">
+                <div class="label-title-box text-center">
+                  <span class="font-white">Heavy Metal</span>
+                  <div class="label-subtitle ">
+                    <span class="subtitle">Subtitle</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="img-album-container">
+                <img src="img/label/stranger.jpeg" alt="">
+                <div class="label-title-box text-center">
+                  <span class="font-white">Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</span>
+                  <div class="label-subtitle ">
+                    <span class="subtitle">Kyle Dixon & Michael Stein</span>
+                  </div>
+                </div>
+              </div>
+              <div class="img-album-container">
+                <img src="img/label/aquietplace.jpeg" alt="">
+                <div class="label-title-box text-center">
+                  <span class="font-white">A quiet place</span>
+                  <div class="label-subtitle ">
+                    <span class="subtitle">Subtitle</span>
+                  </div>
+                </div>
+              </div>
+              <div class="img-album-container">
+                <img src="img/label/split.jpeg" alt="">
+                <div class="label-title-box text-center">
+                  <span class="font-white">Split</span>
+                  <div class="label-subtitle ">
+                    <span class="subtitle">Subtitle</span>
+                  </div>
+                </div>
+              </div>
+              <div class="img-album-container">
+                <img src="img/label/cure.jpeg" alt="">
+                <div class="label-title-box text-center">
+                  <span class="font-white">A cure for wellness</span>
+                  <div class="label-subtitle ">
+                    <span class="subtitle">Subtitle</span>
+                  </div>
+                </div>
+              </div>
+              <div class="img-album-container">
+                <img src="img/label/sinister.jpeg" alt="">
+                <div class="label-title-box text-center">
+                  <span class="font-white">Sinister</span>
+                  <div class="label-subtitle ">
+                    <span class="subtitle">Subtitle</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- end albums -->
+          </main>
+          <!-- END MAIN (nav/albums) -->
+        </div>
       </div>
-      <!-- END SID-BAR (left) -->
-      <!-- HEADER ROW (upgrade) -->
-      <div class="box-r float-r">
-        <header class="bg-color-bunker float-r">
-          <div class="button-upgrade-container float-r">
-            <span class="button font-white">EFFETTUA L' UPGRADE</span>
-          </div>
-        </header>
-        <!-- END HEADER ROW (upgrade) -->
-        <!-- MAIN (nav/albums) -->
-        <main class="bg-color-blackrussian">
-          <!-- NAVBAR ROW -->
-          <nav class="flex-container">
-            <ul>
-              <li class="over-white">IN EVIDENZA <hr></li>
-              <li class="over-white">PODCAST <hr></li>
-              <li class="over-white">CLASSIFICHE <hr></li>
-              <li class="over-white">GENERI E MOO <hr></li>
-              <li class="over-white">NUOVE USCIT <hr></li>
-              <li class="over-white">SCOPRI <hr></li>
-            </ul>
-          </nav>
-          <!-- END NAVBAR ROW -->
-          <!-- albums -->
-          <div class="margin-main-titl">
-            <span class="main-title font-white">Recently played</span>
-          </div>
-          <div class="flex-container albums-hr">
-            <div class="img-album-container">
-              <img src="img/label/metal_lifting.jpg" alt="">
-              <div class="label-title-box text-center">
-                <span class="font-white">Heavy Metal</span>
-                <div class="label-subtitle ">
-                  <span class="subtitle">Subtitle</span>
-                </div>
-              </div>
-            </div>
+      <!-- FOOTER (album/player/volume) -->
+      <footer class="bg-color-gray padding-default">
 
-            <div class="img-album-container">
-              <img src="img/label/stranger.jpeg" alt="">
-              <div class="label-title-box text-center">
-                <span class="font-white">Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</span>
-                <div class="label-subtitle ">
-                  <span class="subtitle">Kyle Dixon & Michael Stein</span>
-                </div>
-              </div>
-            </div>
-            <div class="img-album-container">
-              <img src="img/label/aquietplace.jpeg" alt="">
-              <div class="label-title-box text-center">
-                <span class="font-white">A quiet place</span>
-                <div class="label-subtitle ">
-                  <span class="subtitle">Subtitle</span>
-                </div>
-              </div>
-            </div>
-            <div class="img-album-container">
-              <img src="img/label/split.jpeg" alt="">
-              <div class="label-title-box text-center">
-                <span class="font-white">Split</span>
-                <div class="label-subtitle ">
-                  <span class="subtitle">Subtitle</span>
-                </div>
-              </div>
-            </div>
-            <div class="img-album-container">
-              <img src="img/label/cure.jpeg" alt="">
-              <div class="label-title-box text-center">
-                <span class="font-white">A cure for wellness</span>
-                <div class="label-subtitle ">
-                  <span class="subtitle">Subtitle</span>
-                </div>
-              </div>
-            </div>
-            <div class="img-album-container">
-              <img src="img/label/sinister.jpeg" alt="">
-              <div class="label-title-box text-center">
-                <span class="font-white">Sinister</span>
-                <div class="label-subtitle ">
-                  <span class="subtitle">Subtitle</span>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- end albums -->
-        </main>
-        <!-- END MAIN (nav/albums) -->
-      </div>
-
-
-
+      </footer>
+      <!--END FOOTER (album/player/volume) -->
     </div>
     <!-- END TOTAL PAGE -->
-    <!-- FOOTER (album/player/volume) -->
-    <footer class="bg-color-gray fixed">
-
-    </footer>
-    <!--END FOOTER (album/player/volume) -->
-
   </body>
 </html>
