hover su label albums (test)

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   <li>Nome Playlist</li>
                   <li>Nome Playlist</li>
                   <li>Nome Playlist</li>
-                  <li>Nome Playlist</li>            
+                  <li>Nome Playlist</li>
                 </ul>
               </div>
             </div>
@@ -96,7 +96,9 @@
             </div>
             <div class="flex albums-hr">
               <div class="img-album-container">
-                <img src="img/label/metal_lifting.jpg" alt="">
+                <div class="img-box">
+                  <img src="img/label/metal_lifting.jpg" alt="">
+                </div>
                 <div class="label-title-box text-center">
                   <span class="font-white">Heavy Metal</span>
                   <div class="label-subtitle ">
@@ -106,7 +108,9 @@
               </div>
 
               <div class="img-album-container">
-                <img src="img/label/stranger.jpeg" alt="">
+                <div class="img-box">
+                  <img src="img/label/stranger.jpeg" alt="">
+                </div>
                 <div class="label-title-box text-center">
                   <span class="font-white">Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</span>
                   <div class="label-subtitle ">
@@ -115,7 +119,9 @@
                 </div>
               </div>
               <div class="img-album-container">
-                <img src="img/label/aquietplace.jpeg" alt="">
+                <div class="img-box">
+                  <img src="img/label/aquietplace.jpeg" alt="">
+                </div>
                 <div class="label-title-box text-center">
                   <span class="font-white">A quiet place</span>
                   <div class="label-subtitle ">
@@ -124,7 +130,9 @@
                 </div>
               </div>
               <div class="img-album-container">
-                <img src="img/label/split.jpeg" alt="">
+                <div class="img-box">
+                  <img src="img/label/split.jpeg" alt="">
+                </div>
                 <div class="label-title-box text-center">
                   <span class="font-white">Split</span>
                   <div class="label-subtitle ">
@@ -133,7 +141,9 @@
                 </div>
               </div>
               <div class="img-album-container">
-                <img src="img/label/cure.jpeg" alt="">
+                <div class="img-box">
+                  <img src="img/label/cure.jpeg" alt="">
+                </div>
                 <div class="label-title-box text-center">
                   <span class="font-white">A cure for wellness</span>
                   <div class="label-subtitle ">
@@ -142,7 +152,9 @@
                 </div>
               </div>
               <div class="img-album-container">
-                <img src="img/label/sinister.jpeg" alt="">
+                <div class="img-box">
+                  <img src="img/label/sinister.jpeg" alt="">
+                </div>
                 <div class="label-title-box text-center">
                   <span class="font-white">Sinister</span>
                   <div class="label-subtitle ">
