--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- TOTAL PAGE -->
     <div class="wrapper ">
       <!-- SID-BAR (left) -->
-      <div class="principal-section">
+      <div class="principal-section clearfix">
         <div class="side-bar bg-color-black float-l padding-default flex-    column">
           <!-- logo side-bar -->
           <div class="side-top">
@@ -84,8 +84,8 @@
                 <li class="over-white">IN EVIDENZA <hr></li>
                 <li class="over-white">PODCAST <hr></li>
                 <li class="over-white">CLASSIFICHE <hr></li>
-                <li class="over-white">GENERI E MOO <hr></li>
-                <li class="over-white">NUOVE USCIT <hr></li>
+                <li class="over-white">GENERI E MOOD <hr></li>
+                <li class="over-white">NUOVE USCITE <hr></li>
                 <li class="over-white">SCOPRI <hr></li>
               </ul>
             </nav>
@@ -163,8 +163,66 @@
                 </div>
               </div>
             </div>
-
             <!-- end albums -->
+            <div class="margin-main-titl">
+              <span class="main-title font-white">Creato per John Doe</span>
+              </br>
+              <span class="subtitle">
+                Più ascolti, più accurati saranno i suggerimenti.
+              </span>
+            </div>
+            <div class="flex albums-hr">
+              <div class="img-album-container">
+                <div class="img-box">
+                  <img src="img/label/radar.jpeg" alt="">
+                </div>
+                <div class="label-title-box text-center">
+                  <span class="font-white">Rlease Radar</span>
+                </div>
+              </div>
+
+              <div class="img-album-container">
+                <div class="img-box">
+                  <img src="img/label/mixdaily.jpeg" alt="">
+                </div>
+                <div class="label-title-box text-center">
+                  <span class="font-white">Daily Mix 1</span>
+                </div>
+              </div>
+
+            </div>
+            <div class="margin-main-titl">
+              <span class="main-title font-white">Artisti piú popolari</span>
+              </br>
+              <span class="subtitle">
+                Più ascolti, più accurati saranno i suggerimenti.
+              </span>
+            </div>
+            <div class="flex albums-hr">
+              <div class="img-album-container">
+                <div class="img-box circular-img">
+                  <img src="img/label/youg.jpeg" alt="">
+                </div>
+                <div class="label-title-box text-center">
+                  <span class="font-white">Lana del Rey</span>
+                </div>
+              </div>
+
+              <div class="img-album-container">
+                <div class="img-box circular-img">
+                  <img src="img/label/einaudi.jpeg" alt="">
+                </div>
+                <div class="label-title-box text-center">
+                  <span class="font-white">Einaudi</span>
+                </div>
+              </div>
+
+            </div>
+
+
+
+
+
           </main>
           <!-- END MAIN (nav/albums) -->
         </div>
