miniatura copertina album e titolo nel footer/response del main part1

--- a/index.html
+++ b/index.html
@@ -239,19 +239,43 @@
                   <span class="font-white">Einaudi</span>
                 </div>
               </div>
-
             </div>
-
-
-
-
-
           </main>
           <!-- END MAIN (nav/albums) -->
         </div>
       </div>
       <!-- FOOTER (album/player/volume) -->
       <footer class="bg-color-gray padding-default">
+        <div class="flex footer-row">
+          <div class="album-miniature-container">
+            <div class="album-mini-img">
+              <img src="img/label/sinister.jpeg" alt="">
+            </div>
+            <div class="box-titl-minialbum">
+              <span class="title-mini-album font-white">
+                Sinister
+              </span>
+              <div class="subtitle-mini-album">
+                <span >
+                  Brano Nome
+                </span>
+              </div>
+            </div>
+
+            <div class="icon-folder-like">
+
+            </div>
+
+          </div>
+
+          <div class="player">
+
+          </div>
+          <div class="controllers">
+
+          </div>
+
+        </div>
 
       </footer>
       <!--END FOOTER (album/player/volume) -->
