responsive main test 3

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <!-- END SID-BAR (left) -->
         <div class="box-r float-l">
           <main class="bg-color-blackrussian">
-            <header class="fixed ">
+            <header class="fixed">
               <div class="button-upgrade-container float-r">
                 <a href="#" class="button font-white">
                   EFFETTUA L' UPGRADE
@@ -102,7 +102,7 @@
               </div>
             </header>
             <!-- NAVBAR ROW -->
-            <nav class="flex">
+            <nav class="">
               <ul>
                 <li class="over-white">IN EVIDENZA <hr></li>
                 <li class="over-white">PODCAST <hr></li>
@@ -141,6 +141,7 @@
                   </div>
                 </div>
               </div>
+
               <div class="img-album-container">
                 <div class="img-box">
                   <img src="img/label/aquietplace.jpeg" alt="">
@@ -152,6 +153,7 @@
                   </div>
                 </div>
               </div>
+
               <div class="img-album-container">
                 <div class="img-box">
                   <img src="img/label/split.jpeg" alt="">
@@ -163,6 +165,7 @@
                   </div>
                 </div>
               </div>
+
               <div class="img-album-container">
                 <div class="img-box">
                   <img src="img/label/cure.jpeg" alt="">
@@ -174,6 +177,7 @@
                   </div>
                 </div>
               </div>
+
               <div class="img-album-container">
                 <div class="img-box">
                   <img src="img/label/sinister.jpeg" alt="">
@@ -187,6 +191,7 @@
               </div>
             </div>
             <!-- end albums -->
+
             <div class="margin-main-titl">
               <span class="main-title font-white">Creato per John Doe</span>
               </br>
@@ -194,7 +199,7 @@
                 Più ascolti, più accurati saranno i suggerimenti.
               </span>
             </div>
-            <div class="flex albums-hr">
+            <div class="flex albums-hr-2">
               <div class="img-album-container">
                 <div class="img-box">
                   <img src="img/label/radar.jpeg" alt="">
@@ -212,8 +217,8 @@
                   <span class="font-white">Daily Mix 1</span>
                 </div>
               </div>
-
             </div>
+            
             <div class="margin-main-titl">
               <span class="main-title font-white">Artisti piú popolari</span>
               </br>
@@ -221,7 +226,7 @@
                 Più ascolti, più accurati saranno i suggerimenti.
               </span>
             </div>
-            <div class="flex albums-hr">
+            <div class="flex albums-hr-2">
               <div class="img-album-container">
                 <div class="img-box circular-img">
                   <img src="img/label/youg.jpeg" alt="">
