responsive main funzionante

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 Più ascolti, più accurati saranno i suggerimenti.
               </span>
             </div>
-            <div class="flex albums-hr-2">
+            <div class="flex albums-hr">
               <div class="img-album-container">
                 <div class="img-box">
                   <img src="img/label/radar.jpeg" alt="">
@@ -226,7 +226,7 @@
                 Più ascolti, più accurati saranno i suggerimenti.
               </span>
             </div>
-            <div class="flex albums-hr-2">
+            <div class="flex albums-hr">
               <div class="img-album-container">
                 <div class="img-box circular-img">
                   <img src="img/label/youg.jpeg" alt="">
