footer contenuto left responsive

--- a/index.html
+++ b/index.html
@@ -252,35 +252,49 @@
       <!-- FOOTER (album/player/volume) -->
       <footer class="bg-color-gray padding-default">
         <div class="flex footer-row">
-          <div class="album-miniature-container">
-            <div class="album-mini-img">
-              <img src="img/label/sinister.jpeg" alt="">
-            </div>
-            <div class="box-titl-minialbum">
-              <span class="title-mini-album font-white">
-                Sinister
-              </span>
-              <div class="subtitle-mini-album">
-                <span >
-                  Brano Nome
+          <!-- col 1 -->
+            <div class="footer-col flex">
+              <div class="album-mini-img">
+                <img src="img/label/sinister.jpeg" alt="">
+              </div>
+              <div class="box-titl-minialbum">
+                <span class="title-mini-album font-white">
+                  Sinister
+                </span>
+                <div class="subtitle-mini-album">
+                  <span >
+                    Brano Nome
+                  </span>
+                </div>
+              </div>
+              <div class=" flex icon-folder-like">
+                <span class="over-white icon-foot-left">
+                  <i class="fa fa-heart-o" aria-hidden="true"></i>
+                </span>
+                <span class="over-white icon-foot-left">
+                  <i class="fa fa-folder-o" aria-hidden="true"></i>
                 </span>
               </div>
+          </div>
+          <!-- end col 1 -->
+          <!-- col 2 -->
+          <div class="footer-col">
+            <div class="player">
+
             </div>
 
-            <div class="icon-folder-like">
+          </div>
+          <!-- end col 2 -->
+          <!-- col 3 -->
+          <div class="footer-col">
+            <div class="controllers">
+
 
             </div>
-
           </div>
+          <!-- end col 3 -->
 
-          <div class="player">
-
-          </div>
-          <div class="controllers">
-
-          </div>
-
-        </div>
+       </div>
 
       </footer>
       <!--END FOOTER (album/player/volume) -->
